ignore the rest of the range.

* setRecord() and insertRecord()
  -Only use fields where generated flag is set to true. This is
  is consistent with the meaning of the flag.
  -Require all fields to map correctly. Previously fields that didn't
  map were simply ignored.
  -For OnManualSubmit, insertRecord() no longer leaves behind an empty
  row if setRecord() fails.

* QSqlQueryModel::indexInQuery() is now virtual. See
QSqlTableModel::indexInQuery() as example of how to implement in a
subclass.

* QSqlTableModel::selectRow(): This is a new method that refreshes a single
row in the model from the database.

* QSqlTableModel edit strategies OnFieldChange/OnRowChange QTBUG-2875
Previously, after changes were submitted in these edit strategies, select()
was called which removed and inserted all rows. This ruined navigation
in QTableView. Now, with these edit strategies, there is no implicit select()
done after committing. This includes deleted rows which remain in
the model as blank rows until the application calls select(). Instead,
selectRow() is called to refresh only the affected row.

* QSqlTableModel::isDirty(): New overloaded method to check whether model
has any changes to submit. QTBUG-3108

****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************

Qt for Linux/X11
----------------


Qt for Windows
--------------
* Accessibility framework uses IAccessible2


Qt for Mac OS X
---------------


Qt for Embedded Linux
---------------------


Qt for Windows CE
-----------------


****************************************************************************